tests/invalid/instances_pc.instances_pc_helper_1.err_exp2
Mercury/int0s/instances_pc.int0:005: Error: [38;5;203minconsistent instance declaration[39;49m
Mercury/int0s/instances_pc.int0:005:   for typeclass [38;5;87m`instances_pc.foo'/2[39;49m with
Mercury/int0s/instances_pc.int0:005:   functional dependency `(A -> B)'.
instances_pc.instances_pc_helper_1.m:019: Here is the conflicting instance.
